feature: 1. refactor mapping heavy load to filter class 2. keymapper only handle exception and logging 3. moved mapping dicts to constants module 4. updated keymaps.yaml

--- a/keymaps.yaml
+++ b/keymaps.yaml
@@ -7,8 +7,55 @@
   source: KEY_LEFTALT
   target: KEY_LEFTCTRL
 # map 2-keys-chord into a new key
+# # RightAlt + hjkl to arrows
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_H
+  target: KEY_LEFT
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_J
+  target: KEY_DOWN
 - type: combo 
   modifier: KEY_RIGHTALT
   source: KEY_K
   target: KEY_UP
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_L
+  target: KEY_RIGHT
+# # remap home + pgdn + pgup + end
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_N
+  target: KEY_HOME
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_M
+  target: KEY_PAGEDOWN
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_COMMA
+  target: KEY_PAGEUP
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_DOT
+  target: KEY_END
+# # remap backspace + delete
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_Y
+  target: KEY_BACKSPACE
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_U
+  target: KEY_BACKSPACE
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_I
+  target: KEY_DELETE
+- type: combo 
+  modifier: KEY_RIGHTALT
+  source: KEY_O
+  target: KEY_DELETE
 # more key combo options is coming
